# python-playwright

./: LICENSE  README.md  main.py  practice3.ipynb  pyproject.toml  requirements.txt
lession9/: Practice1.ipynb
lesson10/: gui.py  practice3.ipynb  practice4.py  practice5.py  test_check.py
lesson3/: lesson3_2.py
lesson8/: practice2.ipynb  practice3.ipynb  practice3.py
